🔧 Rename project from "uggy" to "brushy" and update package versions to 1.0.1 for @brushy/di and @brushy/localstorage. Adjust scripts in package.json for consistency and add new dependencies.

--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "license": "MIT",
   "homepage": "https://gfrancodev.com",
   "scripts": {
-    "build": "turbo run build --filter=./packages/*",
+    "build": "turbo run build --filter=@brushy/*",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "test": "turbo run test --filter=./packages/*",
-    "test:coverage": "turbo run test:coverage --filter=./packages/*",
-    "publish-packages": "turbo run build --filter=@brushy/* && changeset publish",
-    "version-packages": "changeset version",
-    "prepublish": "turbo run build --filter=./packages/*",
-    "publish:npm": "npm run prepublish && pnpm -r publish --access public",
-    "publish:yarn": "npm run prepublish && yarn workspaces foreach npm publish --access public",
-    "publish:pnpm": "npm run prepublish && pnpm -r publish --access public"
+    "test": "turbo run test --filter=@brushy/*",
+    "test:coverage": "turbo run test:coverage --filter=@brushy/*",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "turbo run build --filter=@brushy/* && changeset publish",
+    "prepublish": "turbo run build --filter=@brushy/*",
+    "publish:all": "npm run build && npm publish -w @brushy/* --access public",
+    "publish:yarn": "yarn npm publish --access public"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "turbo": "^2.4.4",
@@ -28,7 +29,6 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "npm@11.0.0",
   "workspaces": [
     "apps/*",
     "packages/*"
