🔧 Update npm publish script in package.json and add publish:npm configuration in turbo.json for improved build and publish workflow.

--- a/turbo.json
+++ b/turbo.json
@@ -36,6 +36,13 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "publish:npm": {
+      "dependsOn": ["build"],
+      "filter": {
+        "include": ["packages/*"],
+        "exclude": ["apps/**"]
+      }
     }
   }
 }
