--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "turbo run test:coverage --filter=@brushy/*",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "turbo run build --filter=@brushy/* && changeset publish",
+    "publish:npm": "turbo run build --filter=@brushy/* && changeset publish",
     "prepublish": "turbo run build --filter=@brushy/*",
     "publish:all": "npm run build && npm publish -w @brushy/* --access public",
     "publish:yarn": "yarn npm publish --access public"
