🔧 Update package versions for @brushy/di (1.0.3) and @brushy/localstorage (1.0.2). Enhance build scripts in package.json for better organization and add lint-staged configuration for improved code formatting. Introduce new dependencies including lint-staged and update vite version to 6.2.2.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "homepage": "https://gfrancodev.com",
   "scripts": {
-    "build": "turbo run build --filter=@brushy/*",
+    "build": "turbo build",
+    "build-packages": "turbo run build --filter=./packages/*",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
@@ -13,11 +14,8 @@
     "test": "turbo run test --filter=@brushy/*",
     "test:coverage": "turbo run test:coverage --filter=@brushy/*",
     "changeset": "changeset",
-    "version": "changeset version",
-    "publish:npm": "turbo run build --filter=@brushy/* && changeset publish",
-    "prepublish": "turbo run build --filter=@brushy/*",
-    "publish:all": "npm run build && npm publish -w @brushy/* --access public",
-    "publish:yarn": "yarn npm publish --access public"
+    "version-packages": "changeset version",
+    "release": "npm run build-packages && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
@@ -35,5 +33,8 @@
   ],
   "dependencies": {
     "@testing-library/dom": "^10.4.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,json}": "prettier --write \"src/**/*.ts\""
   }
 }
