--- a/packages/di/package.json
+++ b/packages/di/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@brushy/di",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Advanced dependency injection library with special support for React",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -54,7 +54,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "prepublishOnly": "npm run build",
-    "publish:all": "npm run build && npm publish -w @brushy/* --access public"
+    "publish:all": "npm run build && npm publish -w @brushy/* --access public",
+    "publish:npm": "npm publish --access public"
   },
   "keywords": [
     "dependency-injection",
@@ -67,7 +68,8 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/brushysuite/brushy-librarys.git"
+    "url": "git+https://github.com/brushysuite/brushy-librarys.git",
+    "directory": "packages/di"
   },
   "bugs": {
     "url": "https://github.com/brushysuite/brushy-librarys/issues"
@@ -89,10 +91,13 @@
     "vitest": "^3.0.8"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": ">=18.0.0"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "lint-staged": "^15.5.0"
   }
 }
