--- a/packages/localstorage/package.json
+++ b/packages/localstorage/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@brushy/localstorage",
-  "version": "1.0.1",
-  "description": "Powerful abstraction for local state management",
+  "version": "1.0.2",
+  "description": "Powerful abstraction for localstorage management",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -27,6 +27,7 @@
   ],
   "sideEffects": false,
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "dev": "tsc --watch",
     "lint": "eslint src/",
@@ -37,9 +38,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "prepublishOnly": "npm run build",
-    "publish:yarn": "yarn npm publish --access public",
-    "publish:npm": "npm publish --access public"
+    "publish": "npm publish --access public"
   },
   "keywords": [
     "localstorage",
@@ -58,7 +57,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/brushysuite/brushy-librarys.git"
+    "url": "git+https://github.com/brushysuite/brushy-librarys.git",
+    "directory": "packages/localstorage"
   },
   "bugs": {
     "url": "https://github.com/brushysuite/brushy-librarys/issues"
@@ -73,8 +73,8 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.1.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "@vitest/ui": "^0.34.6",
+    "@vitest/coverage-v8": "^3.0.8",
+    "@vitest/ui": "^3.0.8",
     "eslint": "^8.51.0",
     "jsdom": "^22.1.0",
     "node-localstorage": "^3.0.5",
@@ -83,12 +83,14 @@
     "react-dom": "^18.2.0",
     "react-test-renderer": "^19.0.0",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "vitest": "^3.0.8"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": ">=18.0.0"
   },
   "dependencies": {
-    "lz-string": "^1.5.0"
+    "lint-staged": "^15.5.0",
+    "lz-string": "^1.5.0",
+    "vite": "6.2.2"
   }
 }
