🔧 Refactor npm publish configuration in turbo.json for improved clarity and remove unnecessary filters. Add changeset configuration for better version management and introduce "immutable" lifecycle in @brushy/di for enhanced dependency management.

--- a/turbo.json
+++ b/turbo.json
@@ -37,12 +37,10 @@
       "cache": false,
       "persistent": true
     },
-    "publish:npm": {
+    "publish": {
       "dependsOn": ["build"],
-      "filter": {
-        "include": ["packages/*"],
-        "exclude": ["apps/**"]
-      }
+      "outputs": [],
+      "cache": false
     }
   }
 }
