🔗 Update homepage URLs in package.json files for better project branding, changing to brushysuite.gfrancodev.com for both the main package and the @brushy/di package documentation.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "author": "Gustavo Franco <contact@gfrancodev.com>",
   "license": "MIT",
-  "homepage": "https://gfrancodev.com",
+  "homepage": "brushysuite.gfrancodev.com",
   "scripts": {
     "build": "turbo build",
     "build-packages": "turbo run build --filter=./packages/*",
